grammar.js
    program: ($) =>
      prec(
        PREC.PROGRAM,
        seq(
          optional($.shebang),
          any_amount_of(
            choice(
              $._statement,
              $._documentation_brief_container,
              $.documentation_command,
              $._documentation_tag_container,
              $._documentation_config_container,
              $.documentation_class,
            ),
          ),
          optional(alias($.return_statement, $.module_return_statement)),
          optional("\0"),
        ),
      ),

    string: ($) =>
      seq(
        field("start", alias($._string_start, "string_start")),
        field("content", optional(alias($._string_content, "string_content"))),
        field("end", alias($._string_end, "string_end")),
      ),

    _statement: ($) =>
      prec.right(
        PREC.STATEMENT,
        seq(
          choice(
            $.assignment,
            $._declaration,
            $.function_call,
            $.do_statement,
            $.while_statement,
            $.repeat_statement,
            $.if_statement,
            $.for_statement,
            // $.comment
          ),
          optional(";"),
        ),
      ),

    _expression: ($) =>
      prec.left(
        choice(
          $.nil,
          $.boolean,
          $.number,
          $.string,
          $.ellipsis,
          $.function,
          $.prefix_exp,
          $.tableconstructor,
          $.binary_operation,
          $.unary_operation,
        ),
      ),

    // Primitives {{{
    ellipsis: (_) => "...",

    local: (_) => "local",

    variable_declaration: ($) =>
      seq(
        optional(field("documentation", $.lua_documentation)),
        $.local,
        list_of(field("name", $.variable_declarator), ",", false),
        optional(
          seq("=", list_of(field("value", $._expression), ",", false)),
        ),
      ),

    variable_declarator: ($) => $._var,

    // var ::=  identifier | prefixexp `[´ exp `]´ | prefixexp `.´ identifier
    _var: ($) =>
      prec(
        PREC.PRIORITY,
        choice(
          $.identifier,
          seq($.prefix_exp, "[", $._expression, "]"),
          seq($.prefix_exp, ".", $.identifier),
        ),
      ),

    _identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    identifier: ($) => $._identifier,

    // Dummy Fields {{{
    _documentation_tag_container: ($) =>
      prec.right(PREC.PROGRAM, seq(/\s*---@tag\s+/, $.documentation_tag)),

    _documentation_config_container: ($) =>
      prec.right(PREC.PROGRAM, seq(/\s*---@config\s+/, $.documentation_config)),

    _documentation_brief_container: ($) =>
      prec.right(
        PREC.PROGRAM,
        seq(
          /@brief \[\[/,
          any_amount_of(/\s*---/, $.documentation_brief),
          /@brief \]\]/,
        ),
      ),

    _doc_type: ($) =>
      prec.right(
        choice(
          $.doc_type_builtin,
          $.doc_identifier,
          alias($.string, $.doc_literal),
          $.doc_type_union,
          $.doc_type_optional,
          $._doc_type_paren,
          $.doc_type_array,
          $.doc_type_key_value,
          $.doc_type_table_literal,
          $.doc_type_function,
        ),
      ),

    doc_type_builtin: ($) =>
      prec.right(
        choice(
          "nil",
          "any",
          $._doc_type_bool,
          "string",
          "number",
          "integer",
          $._doc_type_func,
          "table",
          "thread",
          "userdata",
          "lightuserdata",
        ),
      ),

    doc_identifier: ($) =>
      prec(PREC.PRIORITY, list_of($._identifier, ".", false)),

    _doc_type_bool: ($) => choice("boolean", "bool"),
    _doc_type_func: ($) => choice("function", "fun"),

    doc_type_union: ($) =>
      prec.right(PREC.PRIORITY, seq($._doc_type, "|", $._doc_type)),
    doc_type_optional: ($) => prec.right(PREC.PRIORITY, seq($._doc_type, "?")),
    doc_type_array: ($) =>
      prec.right(PREC.PRIORITY, seq(field("type", $._doc_type), "[]")),

    doc_type_key_value: ($) =>
      seq(
        "table<",
        field("key", $._doc_type),
        ",",
        field("value", $._doc_type),
        ">",
      ),

    doc_type_table_literal: ($) =>
      seq("{", list_of($.doc_table_pair, ",", true), "}"),

    doc_table_pair: ($) =>
      seq(
        field(
          "key",
          choice(
            $.identifier,
            seq("[", choice($.string, $.number, $._doc_type), "]"),
          ),
        ),
        optional("?"),
        ":",
        field("value", $._doc_type),
      ),

    doc_type_function: ($) =>
      prec.right(
        PREC.FUNCTION,
        seq(
          $._doc_type_func,
          "(",
          optional(list_of($.doc_function_parameter, ",", false)),
          ")",
          optional($._doc_function_return),
        ),
      ),

    doc_function_parameter: ($) =>
      choice(
        seq(
          field("name", seq(choice($.identifier, $.ellipsis), optional("?"))),
          optional(seq(":", field("type", $._doc_type))),
        ),
      ),

    _doc_function_return: ($) =>
      seq(
        ":",
        choice(
          prec.right(list_of($.doc_function_return, ",", false)),
          seq("(", prec.right(list_of($.doc_function_return, ",", false)), ")"),
        ),
      ),

    doc_function_return: ($) =>
      prec.right(
        choice(
          field("type", $._doc_type),
          seq(
            field("name", seq($.identifier, optional("?"))),
            optional(seq(":", field("type", $._doc_type))),
          ),
        ),
      ),

    // Definition:
    // ---@class MY_TYPE[:PARENT_TYPE] [@comment]
    //
    // Example:
    //
    // ---@class transport @super class
    // ---@class car : transport @car class
    _doc_eval_container: ($) => seq(/@eval\s+/, $.doc_eval),

    doc_typedecl: ($) => seq(/@type/, list_of($._doc_type, ",", false)),
    lua_documentation: ($) =>
      one_or_more(
        seq(
          "---",
          choice(
            $.doc_comment,
            $.doc_ignore,
            $._doc_eval_container,
            $.doc_class,
            $.doc_parameter,
            $.doc_field,
            $.doc_typedecl,
            $.doc_note,
            $.doc_see,
            $.doc_todo,
            $.doc_usage,
            $.doc_varargs,
            $.doc_return,
          ),
        ),
      ),
    // }}}

    // Comments {{{
    // comment: ($) => choice(seq("--", /[^-].*\r?\n/), $._multi_comment),
